--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
 	"description" : "simple server",
 	"keywords" : ["server", "router", "routing"],
 	"require" : {
-		"php" : "^7.3.0",
-		"lushobarlett/cologger" : "~1.0.0"
+		"php" : "^7",
+		"lushobarlett/cologger" : "^2"
 	},
 	"require-dev" : {
 		"phpunit/phpunit" : "^6"
