--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,9 @@
 {
 	"name" : "lushobarlett/miniserver",
-	"description" : "simple server",
+	"description" : "mini is a lightweight server utility with no dependencies. It's designed to be extended according to the project.",
 	"keywords" : ["server", "router", "routing"],
 	"require" : {
-		"php" : "^7",
-		"lushobarlett/cologger" : "^2"
+		"php" : "^7"
 	},
 	"require-dev" : {
 		"phpunit/phpunit" : "^9"
@@ -18,9 +17,11 @@
 		}
 	],
 	"autoload" : {
-		"files" : ["src/utils.php"],
 		"psr-4" : {
 			"Server\\" : "src/"
 		}
+	},
+	"archive" : {
+		"exclude" : ["/tests"]
 	}
 }
