--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,11 @@
 	"description" : "mini is a lightweight server utility with no dependencies. It's designed to be extended according to the project.",
 	"keywords" : ["server", "router", "routing"],
 	"require" : {
-		"php" : "^7"
+		"php" : "^7.4"
 	},
 	"require-dev" : {
-		"phpunit/phpunit" : "^9"
+		"phpunit/phpunit" : "^9",
+		"vimeo/psalm": "^4.9"
 	},
 	"license" : "MIT",
 	"authors" : [
@@ -18,7 +19,7 @@
 	],
 	"autoload" : {
 		"psr-4" : {
-			"Server\\" : "src/"
+			"Mini\\" : "src/"
 		}
 	},
 	"archive" : {
